--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -4,7 +4,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title">
-        Mixes & DJ Sets Recordings
+        Events
       </h1>
       <!--<p class="subtitle">Drop beats, not bombs</p>-->
     </div>
@@ -15,21 +15,14 @@
   <div class="container">
     <div class="columns entries dark is-multiline">
       <div class="column is-four-fifths">
-        <div class="columns is-multiline">
-        {{ range .Paginator.Pages }}
-          {{ .Render "blocks-in-section-narrow"}}
-        {{ end }}
-        </div>
+        
+            This section is under construction.
+        
       </div>{{/* /column */}}
       <div class="column is-one-fifth sidebar">
         {{ partial "djsets-sidebar.html" . }}
       </div>{{/* /column */}}      
   </div>{{/* /container */}}
-</section>
-<section class="section pagination index">
-  <div class="container">
-    <nav>{{ template "_internal/pagination.html" . }}</nav>
-  </div>
 </section>
 
 <style>
