--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -13,10 +13,36 @@
 
 <section class="section boxgrid">
   <div class="container">
-    <div class="columns entries dark is-multiline">
+    <div class="columns entries dark">
       <div class="column is-four-fifths">
-        
-            This section is under construction.
+      <p class="is-size-3">I'm a mobile and event DJ performing in bars, clubs, corporate events, and private parties.</p>
+      
+      <video controls poster="">
+          <source src="/video/DJ-Promo-Video.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+      </video>
+      
+      <p>Konigi is an open format DJ and can play a wide range of music based on the event, and also provide sound and lighting services. At corporate parties, galas and private parties I play eclectic sets of pop, dance music, disco, R&amp;B, soul, rock, etc. as the client or venue requests. In bars and clubs I play house music nights.</p> 
+      <p>I also DJ a silent disco monthly in the Bay Area, and hosted a monthly DJ meetup in Marin County to showcase DJs. </p>
+      
+      <hr>
+
+      
+      <h2>Sound (Speakers, Mixers, Controllers and Hardware)</h2>
+      
+      <p>For events, we can provide speakers and audio equipment. Our house sound can serve up to 500 people, and we can work with rental services to provide sound for larger venues, as needed.</p>
+      
+      <h2>Lighting</h2>
+      
+      <p>For indoor events, we can provide lighting packages for uplighting and wash lights.</p>
+      
+      <h2>Silent Disco</h2>
+      
+      <p>For private events, we can provide headphones and transmitters for silent discos up to 50 people. For larger events we can work with rental services as needed.</p>
+      
+      <h2>Off-Grid Parties</h2>
+      
+      <p>We have battery powered gear (speakers and dj equipment, beach dj booths) and have hosted parties on beaches and in parks. Let us bring your party outdoors!</p>
         
       </div>{{/* /column */}}
       <div class="column is-one-fifth sidebar">
@@ -25,10 +51,5 @@
   </div>{{/* /container */}}
 </section>
 
-<style>
-.entry {
-  min-height: 320px;
-}
-</style>
 
 {{ end }}
