404 and footer fixes

--- a/themes/djkonigi-2023/layouts/_default/baseof.html
+++ b/themes/djkonigi-2023/layouts/_default/baseof.html
@@ -173,14 +173,12 @@
     <div class="container">
       <div class="has-text-centered mb-6">
         <p>
-          &copy; 2007-{{ time.Now.Format "2006" }} <a href="https://konigi.com">Michael Angeles</a>  &nbsp; &middot; &nbsp; 
+          &copy; <a href="https://konigi.com">Michael Angeles</a>  &nbsp; &middot; &nbsp; 
           Follow me on 
           <a href="https://instagram.com/konigi" target="_blank">Instagram</a>, 
           <a href="https://www.mixcloud.com/djkonigi/" target="_blank">Mixcloud</a>,
           <a href="https://soundcloud.com/konigimusic" target="_blank">Soundcloud</a>,
           <a href="https://www.twitch.tv/djkonigi" target="_blank">Twitch</a>, 
-          <a href="https://www.threads.net/@konigi" target="_blank">Threads</a>,
-          <a rel="me" href="https://mastodon.social/@konigi" target="_blank">Mastodon</a> 
           &amp; <a href="https://www.facebook.com/djkonigi" target="_blank">Facebook</a>
         </p>
         <p>
