--- a/themes/djkonigi-2023/assets/sass/konigi/_home.scss
+++ b/themes/djkonigi-2023/assets/sass/konigi/_home.scss
@@ -45,6 +45,20 @@
 			  @include fontsize(32, 48);
 		  }
     }
+    a.button {
+      color: rgba(255,255,255,1) !important;
+      background: rgba(79,47,131,.8);
+      border-color: rgba(79,47,131,.3);
+      text-decoration: none !important;
+      font-weight: normal;
+      &:hover {
+        color: rgba(255,255,255,1) !important;
+        background: rgba(79,47,131,1);
+        border-color: rgba(79,47,131,.5);
+        text-decoration: none !important;
+        font-weight: normal;
+      }
+    }
   }
   h2 {
       // border-bottom: 1px solid $bordercolor;
