--- a/themes/djkonigi-2023/assets/sass/konigi/_layout.scss
+++ b/themes/djkonigi-2023/assets/sass/konigi/_layout.scss
@@ -377,6 +377,20 @@ article img.centered {
   }
 }
 
+a.button {
+  font-weight: bold;
+  color: rgba(79,47,131,1) !important;
+  background: rgba(219,122,166,.9);
+  border-color: rgba(219,122,166,.3);
+  text-decoration: none !important;
+  &:hover {
+    color: rgba(79,47,131,1) !important;
+    background: rgba(219,122,166,1);
+    border-color: rgba(219,122,166,.5);
+    text-decoration: none !important;
+  }
+}
+
 // AUDIO PLAYER
 .audio-tracks {
   padding-top : 1.25rem;
