--- a/themes/djkonigi-2023/layouts/404.html
+++ b/themes/djkonigi-2023/layouts/404.html
@@ -1,8 +1,7 @@
 {{ define "main" }}
-
   <div class="container content">
   <div class="columns is-centered">
-    <div class="column is-one-third is-size-4">
+    <div class="column is-half is-size-4">
     <img src="/img/john-travolta.gif">
     <p>Sorry. The page you're looking for could not be found. Please try your search <a href="https://www.google.com/search?q=site%3Adjkonigi.com">at Google</a> or <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform">contact me for assistance.</a></p>
     </div>
@@ -15,6 +14,11 @@
     background: #fff;
     color: #111;
     border-radius: 20px;
+    text-align: center;
+  }
+  img {
+    margin: auto;
+    
   }
 </style>
 {{ end }}
