Linking contact to booking page

--- a/themes/djkonigi-2023/layouts/_default/baseof.html
+++ b/themes/djkonigi-2023/layouts/_default/baseof.html
@@ -187,7 +187,7 @@
           <a href="{{ .Site.BaseURL }}/music/">Music</a> &nbsp; &middot; &nbsp;           
           <a href="{{ .Site.BaseURL }}/events/">Events</a> &nbsp; &middot; &nbsp; 
           {{/* <a href="{{ .Site.BaseURL }}/design/">Lessons</a> &nbsp; &middot; &nbsp; */}}
-          <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform?usp=sf_link"  target="_blank">Contact me</a>          
+          <a href="{{ .Site.BaseURL }}/booking/"  target="_blank">Contact me</a>          
         </p>
       </div>{{/* END COLUMNS */}}
     </div>{{/* END CONTAINER */}}
