--- a/themes/djkonigi-2023/layouts/index.html
+++ b/themes/djkonigi-2023/layouts/index.html
@@ -3,10 +3,11 @@
   <div class="container">
     <div class="columns">
       <div class="column is-two-thirds">
-        <h1 class="home-logo">KONIGI</h1>
-        <p class="home-description mt-0 mb-4">Konigi is a DJ and Music Producer in the San Francisco Bay Area of California.</p>
-        <p><strong>Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>. Find out more about <a href="/events">events and services</a> or book below.</strong></p>
-        <p><a href="/booking" class="button is-medium">Book An Event</a></p>
+        <h1 class="home-logo">DJ KONIGI</h1>
+        <p class="home-description mt-0 mb-1">Feel good vibes for parties & corporate events in the San Francisco Bay Area</p>
+        <p class="mb-2">From <strong>Disco and House</strong> to varied open format parties with a variety of genres from <strong>Chart Pop, 80's Pop & even R&B and Rock</strong>, we can craft the sound that fits your party.</p>
+        <p class="mb-2">Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party.</strong></p>
+        <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me</a></p>
       </div>
   </div>
 </section>
