--- a/themes/djkonigi-2023/layouts/index.html
+++ b/themes/djkonigi-2023/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="column is-two-thirds">
         <h1 class="home-logo">DJ KONIGI</h1>
         <p class="home-description mt-0 mb-1">Feel good vibes for parties & corporate events in the San Francisco Bay Area</p>
-        <p class="mb-2">From <strong>Disco and House</strong> to <strong>Current Chart, 80's Pop and even R&B and Rock</strong>, we can craft the sound that fits your party. Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party.</strong></p>
+        <p class="mb-2">From <strong>Disco and House</strong> to <strong>Current Chart and Pop, 80's, 90's, R&B and Rock</strong>, we can craft the sound that fits your party. Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party.</strong></p>
         <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me</a></p>
       </div>
   </div>
