--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -1,29 +1,21 @@
 {{ define "main" }}
 
-<section class="hero is-centered">
-  <div class="hero-body">
-    <div class="container">
-      <h1 class="title">
-        Events
-      </h1>
-      <!--<p class="subtitle">Drop beats, not bombs</p>-->
-    </div>
-  </div>
-</section>
 
 <section class="section boxgrid">
   <div class="container">
     <div class="columns entries dark">
       <div class="column is-four-fifths">
-      <p class="is-size-3">I'm a mobile and event DJ performing in bars, clubs, corporate events, and private parties.</p>
       
-      <video controls poster="">
+      <video controls poster="" class="mb-5">
           <source src="/video/DJ-Promo-Video.mp4" type="video/mp4">
           Your browser does not support the video tag.
       </video>
       
+      <p class="is-size-3 mb-2">Now booking mobile and events in bars, clubs, corporate events &amp; private parties.</p>
+
       <p>Konigi is an open format DJ and can play a wide range of music based on the event, and also provide sound and lighting services. At corporate parties, galas and private parties I play eclectic sets of pop, dance music, disco, R&amp;B, soul, rock, etc. as the client or venue requests. In bars and clubs I play house music nights.</p> 
       <p>I also DJ a silent disco monthly in the Bay Area, and hosted a monthly DJ meetup in Marin County to showcase DJs. </p>
+      <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me for Booking</a></p>
       
       <hr>
 
