--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -15,14 +15,13 @@
 
       <p>Konigi is an open format DJ and can play a wide range of music based on the event, and also provide sound and lighting services. At corporate parties, galas and private parties I play eclectic sets of pop, dance music, disco, R&amp;B, soul, rock, etc. as the client or venue requests. In bars and clubs I play house music nights.</p> 
       <p>I also DJ a silent disco monthly in the Bay Area, and hosted a monthly DJ meetup in Marin County to showcase DJs. </p>
-      <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me for Booking</a></p>
       
       <hr>
 
       
-      <h2>Sound (Speakers, Mixers, Controllers and Hardware)</h2>
+      <h2>Sound</h2>
       
-      <p>For events, we can provide speakers and audio equipment. Our house sound can serve up to 500 people, and we can work with rental services to provide sound for larger venues, as needed.</p>
+      <p>For events, we can provide speakers and audio equipment (mixers, controllers, microphone and other hardware). Our house system can serve up to 500 people, and we can work with rental services to provide sound for larger venues, as needed.</p>
       
       <h2>Lighting</h2>
       
@@ -35,6 +34,11 @@
       <h2>Off-Grid Parties</h2>
       
       <p>We have battery powered gear (speakers and dj equipment, beach dj booths) and have hosted parties on beaches and in parks. Let us bring your party outdoors!</p>
+      
+      <hr>
+      
+      <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me for Booking</a></p>
+
         
       </div>{{/* /column */}}
       <div class="column is-one-fifth sidebar">
