--- a/themes/djkonigi-2023/layouts/index.html
+++ b/themes/djkonigi-2023/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="column is-two-thirds">
         <h1 class="home-logo">DJ KONIGI</h1>
         <p class="home-description mt-0 mb-1">Feel good vibes in the Bay Area</p>
-        <p class="mb-2">From <strong>House and Disco</strong> to R&B, Current Chart, Pop, and nostalgic tracks from the 80's and 90's, <strong>I craft a sound that fits your party.</strong> Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party.</strong></p>
+        <p class="mb-2">From <strong>House and Disco</strong> to R&B, Current Chart, Pop, and nostalgic tracks from the 80's and 90's, <strong>I craft a sound that fits your party.</strong> Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party or corporate event.</strong></p>
         <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me</a></p>
       </div>
   </div>
