--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -13,7 +13,7 @@
 <section class="section mt-0 pt-0">
   <div class="container">
     <div class="columns">
-      <div class="column is-four-fifths">
+      <div class="column is-full">
       <h2 class="pb-5">Singles</h2>
       
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1N7V1fRgq2DOO5DCa7UKrj?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
@@ -242,12 +242,7 @@
         </div>
       </div>   
       
-      <hr>
-        
-      </div>{{/* /.column */}}
-      <div class="column is-one-fifth sidebar">
-        {{ partial "djsets-sidebar.html" . }}
-      </div>{{/* /column */}}            
+      
       
     </div>{{/* /columns */}}
   </div>{{/* /container */}}
