--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -4,7 +4,7 @@
 <section class="section boxgrid">
   <div class="container">
     <div class="columns entries dark">
-      <div class="column is-four-fifths">
+      <div class="column is-full">
       
       <video controls poster="" class="mb-5">
           <source src="/video/DJ-Promo-Video.mp4" type="video/mp4">
@@ -40,10 +40,7 @@
       <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me for Booking</a></p>
 
         
-      </div>{{/* /column */}}
-      <div class="column is-one-fifth sidebar">
-        {{ partial "djsets-sidebar.html" . }}
-      </div>{{/* /column */}}      
+      </div>{{/* /column */}} 
   </div>{{/* /container */}}
 </section>
 
