Update events headline

--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -11,7 +11,7 @@
           Your browser does not support the video tag.
       </video>
       
-      <p class="is-size-3 mb-2">Now booking mobile and events in bars, clubs, corporate events &amp; private parties.</p>
+      <p class="is-size-3 mb-2">Now booking events for bars, clubs, corporate &amp; private parties.</p>
 
       <p>Konigi is an open format DJ and can play a wide range of music based on the event, and also provide sound and lighting services. At corporate parties, galas and private parties I play eclectic sets of pop, dance music, disco, R&amp;B, soul, rock, etc. as the client or venue requests. In bars and clubs I play house music nights.</p> 
       <p>I also DJ a silent disco monthly in the Bay Area, and hosted a monthly DJ meetup in Marin County to showcase DJs. </p>
