Adding Can't You See to Music

--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -33,6 +33,20 @@
       
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
+        <img src="/media/music/cantyousee.png">
+        </div>
+        <div class="column is-four-fifths">
+          <h3>Can't You See (Konigi Mashup)</h3>
+          <p>Notorious BIG / Detroit Swindle / Stevie Wonder</p>
+          <audio src="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&raw=1" controls></audio> 
+          {{/* <p><a href="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+        </div>
+      </div>
+      
+      <hr>
+      
+      <div class="columns audio-tracks">       
+        <div class="column is-one-fifth">
         <img src="/media/music/lucky-sealion.png">
         </div>
         <div class="column is-four-fifths">
