Adding Got to Be Thinking of You

--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -30,6 +30,20 @@
       <hr>
 
       <h2 class="pt-5 pb-5">Mashups</h2>
+
+      <div class="columns audio-tracks">       
+        <div class="column is-one-fifth">
+        <img src="/media/music/got-to-be-thinking-of-you.jpg">
+        </div>
+        <div class="column is-four-fifths">
+          <h3>Got to Be Thinking of You (Konigi Mashup)</h3>
+          <p>Sister Sledge / Cheryl Lynn</p>
+          <audio src="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&raw=1" controls></audio> 
+          {{/* <p><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+        </div>
+      </div>
+      
+      <hr>
       
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
