Adding download links back

--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -39,7 +39,7 @@
           <h3>Got to Be Thinking of You (Konigi Mashup)</h3>
           <p>Sister Sledge / Cheryl Lynn</p>
           <audio src="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -53,7 +53,7 @@
           <h3>Can't You See (Konigi Mashup)</h3>
           <p>Notorious BIG / Detroit Swindle / Stevie Wonder</p>
           <audio src="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -67,7 +67,7 @@
           <h3>Sealion Woman X Get Lucky (Konigi Mashup)</h3>
           <p>Feist / Daft Punk</p>
           <audio src="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -81,7 +81,7 @@
           <h3>Hands to the Sky x Fake ID (Konigi Mashup)</h3>
           <p>Purple Disco Machine / Riton & Kah-Lo</p>
           <audio src="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -95,7 +95,7 @@
           <h3>Nobody Speak x Fly Away (Konigi Mashup)</h3>
           <p>DJ Shadow / Lenny Kravitz</p>
           <audio src="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>   
       
@@ -109,7 +109,7 @@
           <h3>We've Lost Teen Spirit (Konigi Mashup)</h3>
           <p>fred again.. / Nirvana</p>
           <audio src="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>      
       
@@ -123,7 +123,7 @@
           <h3>Chloe & Goates (Konigi Mashup)</h3>
           <p>Soul Wax / Nick Bike / Chloe Sevigny</p>
           <audio src="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -137,7 +137,7 @@
           <h3>Fake ID X French Kiss X Dog Days (Konigi Mashup)</h3>
           <p>Riton & Kah-Lo / Lil Louis / Matthew Dear</p>
           <audio src="https://www.dropbox.com/s/yfukstlobbt6ma1/Fake%20ID%20X%20French%20Kiss%20X%20Dog%20Days%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/yfukstlobbt6ma1/Fake%20ID%20X%20French%20Kiss%20X%20Dog%20Days%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/yfukstlobbt6ma1/Fake%20ID%20X%20French%20Kiss%20X%20Dog%20Days%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -151,7 +151,7 @@
           <h3>Supersonic Beatbox (Konigi Mashup)</h3>
           <p>JJ Fad / Art Of Noise </p>
           <audio src="https://www.dropbox.com/s/z7ik1bcqoh0ayvt/Supersonic%20Beatbox.mp3?raw=1" controls></audio>
-          {{/* <p><a href="https://www.dropbox.com/s/z7ik1bcqoh0ayvt/Supersonic%20Beatbox.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/z7ik1bcqoh0ayvt/Supersonic%20Beatbox.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -165,7 +165,7 @@
           <h3>Plastic Dreams X House Work (Konigi Mashup)</h3>
           <p>Jaydee / Jax Jones</p>
           <audio src="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -179,7 +179,7 @@
           <h3>Another One Bites The Box (Konigi Mashup)</h3>
           <p>Roddy Ricch / Queen </p>
           <audio src="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -193,7 +193,7 @@
           <h3>You Get What You Give X One More Time (Konigi Mashup)</h3>
           <p>The New Radicals / Daft Punk</p>
           <audio src="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -207,7 +207,7 @@
           <h3>Push + Wish (Konigi Mashup)</h3>
           <p>Stevie Wonder / Salt N Pepa</p>
           <audio src="https://www.dropbox.com/s/b71gdya90oz81j2/Push%20%2B%20Wish%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/b71gdya90oz81j2/Push%20%2B%20Wish%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/b71gdya90oz81j2/Push%20%2B%20Wish%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -221,7 +221,7 @@
           <h3>Suedehead (Konigi Mashup)</h3>
           <p>Morrisey / David Starfire</p>
           <audio src="https://www.dropbox.com/s/oa8i4ac7xn8e056/Suedehead%20x%20The%20One%20%28Konigi%20Remix%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/oa8i4ac7xn8e056/Suedehead%20x%20The%20One%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/oa8i4ac7xn8e056/Suedehead%20x%20The%20One%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>      
 
@@ -237,7 +237,7 @@
           <h3>Dub My System (Konigi Remix)</h3>
           <p>The System</p>
           <audio src="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>          
       
@@ -251,7 +251,7 @@
           <h3>Underwater (Konigi Remix)</h3>
           <p>Rufus Du Sol</p>
           <audio src="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>          
       
@@ -265,7 +265,7 @@
           <h3>Rumors (Konigi Remix)</h3>
           <p>Lizzo</p>
           <audio src="https://www.dropbox.com/s/57grldnbr7jqtee/Rumors%20%28Konigi%20Extended%20Remix%29.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/57grldnbr7jqtee/Rumors%20%28Konigi%20Extended%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/57grldnbr7jqtee/Rumors%20%28Konigi%20Extended%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>   
       
@@ -279,7 +279,7 @@
           <h3>Max Dubroom (Konigi Remix)</h3>
           <p>Max Q / Todd Terry</p>
           <audio src="https://www.dropbox.com/s/e9ic8jz6qv771t8/Maxxx%20Dubroom.mp3?raw=1" controls></audio> 
-          {{/* <p><a href="https://www.dropbox.com/s/e9ic8jz6qv771t8/Maxxx%20Dubroom.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p> */}}
+          <p><a href="https://www.dropbox.com/s/e9ic8jz6qv771t8/Maxxx%20Dubroom.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>   
       
