Change contact link to go directly to form

--- a/themes/djkonigi-2023/layouts/_default/baseof.html
+++ b/themes/djkonigi-2023/layouts/_default/baseof.html
@@ -134,7 +134,7 @@
             <li class="{{ if or (eq .Section "music") (eq .Section "musictags") }} active{{ end }}"><a href="{{ .Site.BaseURL }}music/">Music</a></li>
             <li class="{{ if or (eq .Section "events") (eq .Section "eventstags") }} active{{ end }}"><a href="{{ .Site.BaseURL }}events/">Events</a></li>
             {{/* <li class="{{ if or (eq .Section "lessons") (eq .Section "lessonstags") }} active{{ end }}"><a href="{{ .Site.BaseURL }}lessons/">Lessons</a></li> */}}
-            <li class="{{ if or (eq .Section "booking") (eq .Section "bookingtags") }} active{{ end }}"><a href="{{ .Site.BaseURL }}booking/" class="button"><i class="fa fa-comment pr-1" aria-hidden="true"></i> Contact</a></li>
+            <li class="{{ if or (eq .Section "booking") (eq .Section "bookingtags") }} active{{ end }}"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform" class="button"><i class="fa fa-comment pr-1" aria-hidden="true"></i> Contact</a></li>
             {{/* 
             <li id="socmed">          
               <a href="https://konigi.bandcamp.com/"><i class="fab fa-bandcamp"></i></a>
