--- a/themes/djkonigi-2023/layouts/section/events.html
+++ b/themes/djkonigi-2023/layouts/section/events.html
@@ -37,7 +37,7 @@
       
       <hr>
       
-      <p class="mb-4"><a href="/booking" class="button is-medium">Contact Me for Booking</a></p>
+      <p class="mb-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform" class="button is-medium">Contact Me for Booking</a></p>
 
         
       </div>{{/* /column */}} 
