1minutedanceparty link in footer

--- a/themes/djkonigi-2023/layouts/_default/baseof.html
+++ b/themes/djkonigi-2023/layouts/_default/baseof.html
@@ -173,7 +173,9 @@
     <div class="container">
       <div class="has-text-centered mb-6">
         <p>
-          &copy; <a href="https://konigi.com">Michael Angeles</a>  &nbsp; &middot; &nbsp; 
+          Need a dance break? Have a <a href="https://1minutedanceparty.com/" target="_blank">1 Minute Dance Party</a>!
+          <hr>
+          &copy; <a href="https://konigi.com" target="_blank">Michael Angeles</a>  &nbsp; &middot; &nbsp; 
           Follow me on 
           <a href="https://instagram.com/djkonigi" target="_blank">Instagram</a>, 
           <a href="https://www.mixcloud.com/djkonigi/" target="_blank">Mixcloud</a>,
