Home page update

--- a/themes/djkonigi-2023/layouts/index.html
+++ b/themes/djkonigi-2023/layouts/index.html
@@ -5,7 +5,7 @@
       <div class="column is-two-thirds">
         <h1 class="home-logo">DJ KONIGI</h1>
         <p class="home-description mt-0 mb-1">Feel good vibes in the Bay Area</p>
-        <p class="mb-2">From <strong>House, Disco &amp; R&B</strong> to nostalgic tracks from the 80's and 90's, <strong>I craft a sound that fits your party.</strong> Listen to <a href="mixes">mixes</a> and <a href="/music">music</a>, find out more about <a href="/events">events and services</a>, or reach out to see if my services are a good fit for your party or corporate event.</strong></p>
+        <p class="mb-2"><strong>I craft a sound that fits your party</strong>. I love catering to parties that prefer <strong>Disco, House &amp; R&B</strong> and nostalgic tracks from the 80's and 90's. <a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform">Reach out</a> to find out if my <a href="/events">services</a> are a good fit for your party or corporate event, or listen to <a href="mixes">mixes</a> and <a href="/music">music</a>.</strong></p>
         <p class="mb-4"><a href="https://docs.google.com/forms/d/e/1FAIpQLSfHve_3pTqk7KtbmRcHhqGFh3_eQGckqj2bR97e9pbipTbOGw/viewform" class="button is-medium">Contact Me for Booking</a></p>
       </div>
   </div>
