Adding Jupiter to Music

--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -228,6 +228,18 @@
       <hr>
         
       <h2 class="pt-5 pb-5">Remixes</h2>
+
+      <div class="columns audio-tracks">       
+        <div class="column is-one-fifth">
+        <img src="/media/music/Jupiter.png">
+        </div>
+        <div class="column is-four-fifths">
+          <h3>Jupiter (Konigi Remix)</h3>
+          <p>The APX</p>
+          <audio src="https://www.dropbox.com/scl/fi/h7jvdiofnj19q93b3ydks/Jupiter-Konigi-Remix.mp3?rlkey=zne27hbymtfgatx86b3160rqm&dl=0&raw=1" controls></audio> 
+          <p><a href="https://www.dropbox.com/scl/fi/h7jvdiofnj19q93b3ydks/Jupiter-Konigi-Remix.mp3?rlkey=zne27hbymtfgatx86b3160rqm&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        </div>
+      </div>     
       
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
