--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -200,28 +200,16 @@
       <hr>
 
       <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/push+wish.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Push + Wish (Konigi Mashup)</h3>
-          <p>Stevie Wonder / Salt N Pepa</p>
-          <audio src="https://www.dropbox.com/s/b71gdya90oz81j2/Push%20%2B%20Wish%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/b71gdya90oz81j2/Push%20%2B%20Wish%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1447858687&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/push-wish-konigi-mashup" title="Push + Wish (Konigi Mashup) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Push + Wish (Konigi Mashup) - FREE DL</a></div>
         </div>
       </div>
       
       <hr>
       
       <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/sudehead-track-cover.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Suedehead (Konigi Mashup)</h3>
-          <p>Morrisey / David Starfire</p>
-          <audio src="https://www.dropbox.com/s/oa8i4ac7xn8e056/Suedehead%20x%20The%20One%20%28Konigi%20Remix%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/oa8i4ac7xn8e056/Suedehead%20x%20The%20One%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1372111507&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/suedehead-x-the-one-remix" title="Suedehead x The One (Konigi Mashup) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Suedehead x The One (Konigi Mashup) - FREE DL</a></div>
         </div>
       </div>      
 
@@ -230,14 +218,8 @@
       <h2 class="pt-5 pb-5">Remixes</h2>
 
       <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/Jupiter.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Jupiter (Konigi Remix)</h3>
-          <p>The APX</p>
-          <audio src="https://www.dropbox.com/scl/fi/h7jvdiofnj19q93b3ydks/Jupiter-Konigi-Remix.mp3?rlkey=zne27hbymtfgatx86b3160rqm&dl=0&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/h7jvdiofnj19q93b3ydks/Jupiter-Konigi-Remix.mp3?rlkey=zne27hbymtfgatx86b3160rqm&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1813753548&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/the-apx-jupiter-konigi-remix" title="The APX - Jupiter (Konigi Remix) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">The APX - Jupiter (Konigi Remix) - FREE DL</a></div>
         </div>
       </div>     
       
@@ -270,28 +252,16 @@
       <hr>
       
       <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/Rumors.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Rumors (Konigi Remix)</h3>
-          <p>Lizzo</p>
-          <audio src="https://www.dropbox.com/s/57grldnbr7jqtee/Rumors%20%28Konigi%20Extended%20Remix%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/57grldnbr7jqtee/Rumors%20%28Konigi%20Extended%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1514784388&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/rumors-konigi-remix" title="Rumors (Konigi Remix)" target="_blank" style="color: #cccccc; text-decoration: none;">Rumors (Konigi Remix)</a></div>
         </div>
       </div>   
       
       <hr>
       
       <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/MAXXXDUBROOM.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Max Dubroom (Konigi Remix)</h3>
-          <p>Max Q / Todd Terry</p>
-          <audio src="https://www.dropbox.com/s/e9ic8jz6qv771t8/Maxxx%20Dubroom.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/e9ic8jz6qv771t8/Maxxx%20Dubroom.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1499698780&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/maxxxdubroom" title="Maxxx Dubroom" target="_blank" style="color: #cccccc; text-decoration: none;">Maxxx Dubroom</a></div>
         </div>
       </div>   
       
