Fixing some tracks

--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -39,13 +39,21 @@
       
       <div class="columns audio-tracks">       
         <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1814491740&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/cant-you-see-konigi-mashup" title="Can&#x27;t You See (Konigi Mashup)" target="_blank" style="color: #cccccc; text-decoration: none;">Can&#x27;t You See (Konigi Mashup)</a></div>
+        </div>
+      </div>
+      
+      <hr>
+      
+      <div class="columns audio-tracks">       
+        <div class="column is-full">
           <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1447858687&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/push-wish-konigi-mashup" title="Push + Wish (Konigi Mashup) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Push + Wish (Konigi Mashup) - FREE DL</a></div>
         </div>
       </div>
       
       <hr>
 
-      <h2 class="pt-5 pb-5">Mashups</h2>
+      <h2 class="pt-5 pb-5">More Mashups & Remixes</h2>
 
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
@@ -54,26 +62,13 @@
         <div class="column is-four-fifths">
           <h3>Got to Be Thinking of You (Konigi Mashup)</h3>
           <p>Sister Sledge / Cheryl Lynn</p>
-          <audio src="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&raw=1" controls></audio> 
+          <audio src="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&st=39yo1xfh&raw=1" controls></audio> 
           <p><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
       <hr>
-      
-      <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/cantyousee.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Can't You See (Konigi Mashup)</h3>
-          <p>Notorious BIG / Detroit Swindle / Stevie Wonder</p>
-          <audio src="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/coms6hwvxfcuvmmd1rr87/Can-t-You-See-Konigi-Mashup.mp3?rlkey=eybwiw6ux0o1xd56e5d0vbiqi&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
-        </div>
-      </div>
-      
-      <hr>
+
       
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
@@ -222,8 +217,6 @@
       </div>      
 
       <hr>
-        
-      <h2 class="pt-5 pb-5">Remixes</h2>
       
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
