--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -14,7 +14,6 @@
   <div class="container">
     <div class="columns">
       <div class="column is-full">
-      <h2 class="pb-5">Singles</h2>
       
       <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1N7V1fRgq2DOO5DCa7UKrj?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       <p class="is-size-6">
@@ -52,18 +51,22 @@
       </div>
       
       <hr>
-
-      <h2 class="pt-5 pb-5">More Mashups & Remixes</h2>
+      
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1814501766&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/fake-id-x-french-kiss-x-dog-days-konigi-mashup" title="Fake ID X French Kiss X Dog Days (Konigi Mashup)" target="_blank" style="color: #cccccc; text-decoration: none;">Fake ID X French Kiss X Dog Days (Konigi Mashup)</a></div>
+      
+      <hr>
+      
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1814503830&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/supersonic-beatbox" title="Supersonic Beatbox" target="_blank" style="color: #cccccc; text-decoration: none;">Supersonic Beatbox</a></div>
+      
+      <hr>      
 
       <div class="columns audio-tracks">       
         <div class="column is-one-fifth">
         <img src="/media/music/got-to-be-thinking-of-you.jpg">
         </div>
         <div class="column is-four-fifths">
-          <h3>Got to Be Thinking of You (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=vwstb34mz06xmbj8m6nz7rym3&dl=0" target="_blank">Got to Be Thinking of You (Konigi Mashup)</a></h3>
           <p>Sister Sledge / Cheryl Lynn</p>
-          <audio src="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&st=39yo1xfh&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/8y4kr1by1ujn5t7y8rv2c/Got-to-Be-Thinking-of-You.mp3?rlkey=1f526vrs6cn0zjkryyisn71qf&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -75,10 +78,8 @@
         <img src="/media/music/lucky-sealion.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Sealion Woman X Get Lucky (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&dl=0" target="_blank">Sealion Woman X Get Lucky (Konigi Mashup)</a></h3>
           <p>Feist / Daft Punk</p>
-          <audio src="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/mns4750zn7s3x16jrhfjv/Sealion-Woman-X-Get-Lucky.mp3?rlkey=40200kf72p0q5v5yo3gwn9r0i&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -89,10 +90,8 @@
         <img src="/media/music/Hands-ID.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Hands to the Sky x Fake ID (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&dl=0" target="_blank">Hands to the Sky x Fake ID (Konigi Mashup)</a></h3>
           <p>Purple Disco Machine / Riton & Kah-Lo</p>
-          <audio src="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/ksk8kl4a785qmy95kigkl/Hands-to-the-Sky-x-Fake-ID-Konigi-Mashup.mp3?rlkey=cikv0am1zd9o849kyggww71rg&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -103,10 +102,8 @@
         <img src="/media/music/nobody-fly.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Nobody Speak x Fly Away (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?dl=0" target="_blank">Nobody Speak x Fly Away (Konigi Mashup)</a></h3>
           <p>DJ Shadow / Lenny Kravitz</p>
-          <audio src="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/leepgiizsba7zv8/Nobody%20Speak%20x%20Fly%20Away%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>   
       
@@ -117,10 +114,8 @@
         <img src="/media/music/lost-teenspirit.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>We've Lost Teen Spirit (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?dl=0" target="_blank">We've Lost Teen Spirit (Konigi Mashup)</a></h3>
           <p>fred again.. / Nirvana</p>
-          <audio src="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/kd4j1kscbcdhi0y/We%20Lost%20Teen%20Spirit%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>      
       
@@ -131,38 +126,8 @@
         <img src="/media/music/Chloe-Goates.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Chloe & Goates (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?dl=0" target="_blank">Chloe & Goates (Konigi Mashup)</a></h3>
           <p>Soul Wax / Nick Bike / Chloe Sevigny</p>
-          <audio src="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/p40gv1lcwo721v3/Chloe%20x%20Goates.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
-        </div>
-      </div>
-      
-      <hr>
-      
-      <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/fakeid-x-french-kiss-x-dog-days.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Fake ID X French Kiss X Dog Days (Konigi Mashup)</h3>
-          <p>Riton & Kah-Lo / Lil Louis / Matthew Dear</p>
-          <audio src="https://www.dropbox.com/s/yfukstlobbt6ma1/Fake%20ID%20X%20French%20Kiss%20X%20Dog%20Days%20%28Konigi%20Mashup%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/yfukstlobbt6ma1/Fake%20ID%20X%20French%20Kiss%20X%20Dog%20Days%20%28Konigi%20Mashup%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
-        </div>
-      </div>
-      
-      <hr>
-
-      <div class="columns audio-tracks">       
-        <div class="column is-one-fifth">
-        <img src="/media/music/supersonic-beatbox.png">
-        </div>
-        <div class="column is-four-fifths">
-          <h3>Supersonic Beatbox (Konigi Mashup)</h3>
-          <p>JJ Fad / Art Of Noise </p>
-          <audio src="https://www.dropbox.com/s/z7ik1bcqoh0ayvt/Supersonic%20Beatbox.mp3?raw=1" controls></audio>
-          <p><a href="https://www.dropbox.com/s/z7ik1bcqoh0ayvt/Supersonic%20Beatbox.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -173,10 +138,8 @@
         <img src="/media/music/plastic-dreams-x-housework.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Plastic Dreams X House Work (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?dl=0" target="_blank">Plastic Dreams X House Work (Konigi Mashup)</a></h3>
           <p>Jaydee / Jax Jones</p>
-          <audio src="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/usmfszq1dclckq8/Plastic%20Dreams%20X%20House%20Work.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -187,10 +150,8 @@
         <img src="/media/music/another-one-bites-the-box.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Another One Bites The Box (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?dl=0" target="_blank">Another One Bites The Box (Konigi Mashup)</a></h3>
           <p>Roddy Ricch / Queen </p>
-          <audio src="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/sumaqgc9xai8zyw/Another%20One%20Bites%20The%20Box.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
@@ -201,21 +162,11 @@
         <img src="/media/music/u-get-what-u-give-x-one-more-time-cover.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>You Get What You Give X One More Time (Konigi Mashup)</h3>
+          <h3><a href="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?dl=0" target="_blank">You Get What You Give X One More Time (Konigi Mashup)</a></h3>
           <p>The New Radicals / Daft Punk</p>
-          <audio src="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/2zbhz7sep1pbl2y/You%20Get%20What%20You%20Give%20X%20One%20More%20Time.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>
       
-      <hr>
-      
-      <div class="columns audio-tracks">       
-        <div class="column is-full">
-          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1372111507&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/suedehead-x-the-one-remix" title="Suedehead x The One (Konigi Mashup) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Suedehead x The One (Konigi Mashup) - FREE DL</a></div>
-        </div>
-      </div>      
-
       <hr>
       
       <div class="columns audio-tracks">       
@@ -223,10 +174,8 @@
         <img src="/media/music/Dub-My-System-square.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Dub My System (Konigi Remix)</h3>
+          <h3><a href="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&dl=0" target="_blank">Dub My System (Konigi Remix)</a></h3>
           <p>The System</p>
-          <audio src="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/scl/fi/0dyhjajvczduhiram8xnu/Dub-My-System-Konigi-Remix.mp3?rlkey=7i7n64i0jsg8m0izl7z43ou7q&dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>          
       
@@ -237,10 +186,8 @@
         <img src="/media/music/Underwater.png">
         </div>
         <div class="column is-four-fifths">
-          <h3>Underwater (Konigi Remix)</h3>
+          <h3><a href="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?dl=0" target="_blank">Underwater (Konigi Remix)</a></h3>
           <p>Rufus Du Sol</p>
-          <audio src="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?raw=1" controls></audio> 
-          <p><a href="https://www.dropbox.com/s/exr2emfac07vj1v/Underwater%20%28Konigi%20Remix%29.mp3?dl=0"><i class="fa fa-arrow-down" aria-hidden="true"></i> Download</a></p>
         </div>
       </div>          
       
@@ -259,7 +206,14 @@
           <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1499698780&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/maxxxdubroom" title="Maxxx Dubroom" target="_blank" style="color: #cccccc; text-decoration: none;">Maxxx Dubroom</a></div>
         </div>
       </div>   
+
+      <hr>
       
+      <div class="columns audio-tracks">       
+        <div class="column is-full">
+          <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1372111507&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="konigi" target="_blank" style="color: #cccccc; text-decoration: none;">konigi</a> · <a href="https://soundcloud.com/konigimusic/suedehead-x-the-one-remix" title="Suedehead x The One (Konigi Mashup) - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Suedehead x The One (Konigi Mashup) - FREE DL</a></div>
+        </div>
+      </div>            
       
       
     </div>{{/* /columns */}}
