--- a/themes/djkonigi-2023/layouts/section/music.html
+++ b/themes/djkonigi-2023/layouts/section/music.html
@@ -14,9 +14,14 @@
   <div class="container">
     <div class="columns">
       <div class="column is-full">
+        
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1818429213&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="Konigi" target="_blank" style="color: #cccccc; text-decoration: none;">Konigi</a> · <a href="https://soundcloud.com/konigimusic/break-it-down" title="Break It Down - FREE DL" target="_blank" style="color: #cccccc; text-decoration: none;">Break It Down - FREE DL</a></div>
       
-      <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1N7V1fRgq2DOO5DCa7UKrj?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      <hr>
+      
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1515567163&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/konigimusic" title="Konigi" target="_blank" style="color: #cccccc; text-decoration: none;">Konigi</a> · <a href="https://soundcloud.com/konigimusic/onidiro" title="Onidiro" target="_blank" style="color: #cccccc; text-decoration: none;">Onidiro</a></div>
       <p class="is-size-6">
+      <a href="https://open.spotify.com/track/1N7V1fRgq2DOO5DCa7UKrj?si=62727832591d4584">Spotify</a>  &middot;
       <a href="https://konigi.bandcamp.com/track/onidiro">Bandcamp</a> &middot;
       <a href="https://music.apple.com/us/album/onidiro-single/1688313623">iTunes</a> &middot;
       <a href="https://music.youtube.com/playlist?list=OLAK5uy_kyye1-L9yXSRx73HcRyuu67Hwu611g4nI&feature=share">YouTube</a> &middot;
