Temp instagram link change

--- a/themes/djkonigi-2023/layouts/_default/baseof.html
+++ b/themes/djkonigi-2023/layouts/_default/baseof.html
@@ -177,7 +177,7 @@
           <hr>
           &copy; <a href="https://konigi.com" target="_blank">Michael Angeles</a>  &nbsp; &middot; &nbsp; 
           Follow me on 
-          <a href="https://instagram.com/djkonigi" target="_blank">Instagram</a>, 
+          <a href="https://instagram.com/konigi" target="_blank">Instagram</a>, 
           <a href="https://www.mixcloud.com/djkonigi/" target="_blank">Mixcloud</a>,
           <a href="https://soundcloud.com/konigimusic" target="_blank">Soundcloud</a>,
           <a href="https://www.twitch.tv/djkonigi" target="_blank">Twitch</a>, 
